miniextendr-macros/tests/ui/module_use_rename.stderr
error: it is not possible to rename wrappers in `miniextendr_module`
 --> tests/ui/module_use_rename.rs:7:9
  |
7 |     use submod as renamed;
  |         ^^^^^^
